Make long words break in issues list items

--- a/gim/front/sass/components/_issues_list.scss
+++ b/gim/front/sass/components/_issues_list.scss
@@ -1,4 +1,5 @@
 @import "compass/css3/animation";
+@import "compass/css3/_hyphenation.scss";
 @import "compass/css3/transition";
 @import "compass/css3/transform";
 
@@ -225,6 +226,9 @@
     min-height: 80px;
     color: $body-text-color;
     cursor: pointer;
+    overflow: hidden;
+    word-wrap: break-word;
+    @include hyphens();
 
     &.with-repository {
         min-height: 100px;
